--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Capítulo 01 - Neymar</h1>
-    <p>Neymar o melhor do planeta </p>
+    <p>Neymar o melhor do planeta,porque Neymar é considerado dos melhores do mundo?
+      Considerando jogadores com no máximo 30 anos de idade, Neymar é o maior artilheiro do futebol mundial atualmente.
+      O brasileiro possui 420 gols na carreira, mais de 80 de vantagem para o segundo colocado </p>
   </body>
 </html>
